--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
@@ -9,11 +9,3 @@
 
 @import 'tailwindcss/utilities';
 
-@font-face {
-    font-family: 'Montserrat';
-    src: url('/assets/fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'),
-         url('/assets/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'),
-         url('/assets/fonts/Montserrat/Montserrat-SemiBold.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
